# ollama_flashcard_generator

./: .gitignore  README.md  cli_docs.md  pyproject.toml
src/flashcard_gen/: __init__.py  chunker.py  cli.py  duplicate_check.py  generate.py  parser.py  prompts.py  rag.py  schema.py
tests/: test_note.md  test_parser.py  test_run.py  test_run_2.py
